--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://freight.cargo.site/w/3840/q/75/i/a17dfc0b27e50cb1c75dcd8fcd13a2d11783729f60265d9a00d184bc5a8d9296/VALORANT_1.png">
     
-    <title> TAB TITLE </title>
+    <title> APCSP Code.org </title>
   </head>
   
   <body>
