updating to portfolio.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <ul>
       <li><a href="https://code.org/"> CODE.ORG </a></li>
-      <li><a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME"> Westview Home </a></li>
+      <li><a href="portfolio.html"> Westview Home </a></li>
       <li><a href="https://poway.instructure.com/"> Canvas </a></li>
     </ul>
     
