--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <ul>
       <li><a href="https://code.org/"> CODE.ORG </a></li>
-      <li><a href="portfolio.html"> Westview Home </a></li>
-      <li><a href="https://poway.instructure.com/"> Canvas </a></li>
+      <li><a href="portfolio.html"> Homepage </a></li>
+      <li><a href="Apps.html"> Appspage </a></li>
     </ul>
     
     <br>
