--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <ul>
       <li><a href="https://code.org/"> CODE.ORG </a></li>
-      <li><a href="portfolio.html"> Homepage </a></li>
+      <li><a href="Games.html"> Gamespage </a></li>
       <li><a href="Apps.html"> Appspage </a></li>
     </ul>
     
