--- a/Games.html
+++ b/Games.html
@@ -1,4 +1,5 @@
-body{
-  background-color:red;
+body {
+background-color: #fefbd8; 
+}
 <<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EuqqAC7Ij94IPEqYqzezNNvspYHn_KXnXUdMyNgL5Xx/embed?nosource"></iframe>>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/m2Axf4Op1lHIofbxyRUtmoOqvy51nGm5MuAPc_O9hDn/embed?nosource"></iframe>
