--- a/Apps.html
+++ b/Apps.html
@@ -2,3 +2,6 @@
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/l21zCkW2u4pHdxGT-avtXg48vkLeOMvjG8xfMMvB2Gs/embed?nosource"></iframe>
     <<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/vdmGfIKTyBUHzLYL4iRI6dA8HQZcRZ58Bc-X5L9WXvA/embed?nosource"></iframe>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/M2PWj6vyXDwav7qyb7UoN9eOTXnBDT1hCEiV4Jap2W6/embed?nosource"></iframe>
+  <body>
+    <ul>
+      <li><a href="index.html"> Homepage </a></li>
